# MPC-with-CasAdi

./: README.md
MECANUM/: CMakeLists.txt  main.cpp  mpc_mecanum.cpp
MECANUM/casadi/: config.h
MECANUM/include/: auto_mecanum.hpp  auto_omni.hpp  mpc_mecanum.hpp
MECANUM/src/: auto_mecanum.cpp  mpc_mecanum.cpp
OMNI/: CMakeLists.txt  main.cpp
OMNI/casadi/: CMakeLists.txt  test_linsol.cpp
OMNI/src/: auto_omni.cpp
